<resources>
    <string name="app_name">Mrits</string>
    <string name="home">Home</string>
    <string name="notice">Notice</string>
    <string name="gallery">Gallery</string>
    <string name="about_us">About Us</string>
    <string name="todo">TODO</string>
    <string name="ebooks">Ebooks</string>
    <string name="website">Website</string>
    <string name="app_id">ca-app-pub-3933045963063630~4909958008</string>
    <string name="banner_ad_unit_id">ca-app-pub-3933045963063630/1419314250</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="my_college_mrits">Mrits</string>
    <string name="about_fagment">Malla Reddy Institute of Technology and Science (MRITS) has been established in the year 2005 under the dynamic leadership of Shri Ch. Malla Reddy garu . The institution is sponsored by Malla Reddy Educational Society. Shri Ch. Malla Reddy garu, our founder Chairman has been in the field of education industry for the last 25 years with an intention of spreading quality education among children at the school level. He established his first technical college in the year 2002 and over a span of 7 years he established more than 10 professional colleges. He won as Honorable Member of Parliament (MP) for Malkajgiri Constituency which is in the jurisdiction of Hyderabad, Telangana State in the year 2014.Our college has been approved by All India Council of Technical Education(AICTE), New Delhi, Accredited by NBA for B.Tech., Recognized by UGC, New Delhi under 2(f) and 12(b) for receiving financial grants, Certified by ISO 9001:2008 and Permanently affiliated to Jawaharlal Nehru Technological University, Hyderabad.

</string>
    <string name="contact_details">Contact Details</string>
    <string name="address">Maisammaguda, Dhulapally, Medchal, Secunderabad Telangana, INDIA\n
        Phone No:
        7995222300, 7207034238\n
        Email: mrits_pril@yahoo.co.in, mrits.s1@gmail.com, info@mrits.ac.in\n
        Website: http://mrits.ac.in/\n</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="mrits">MRITS STUDENT CHAPTERS</string>
    <string name="ecehod">Ph.D. (ECE, JNTUA), M.Tech (ECE), B.Tech (ECE)

Dr. Rachapudi Prabahakar, obtained Ph.D in the field of VLSI in the year of 2017 from JNTUA, Andhra Pradesh, India. He did his M.Tech with the specialization of Digital Systems and Computer Electronics (DSCE) in JNTU College of Engineering Anantapur (JNTU Campus) in 2005 and he did his B.Tech in Electronics and Communications Engineering (ECE) from G Pulla Reddy Engineering College, Kurnool in 1995. He is working as Professor of ECE Department in Malla Reddy Institute of Technology and Science, Maisammaguda, Kompally, Hyderabad, Telangana, India since 1st March, 2021 to till date. He published more than 15 papers in National and International Journals and presented more than 10 papers in various Conferences in and outside of India. He is having total of 23 years of experience in teaching and has been worked in various Engineering Colleges in different positions from Assistant Professor to Vice Principal of the College. His area of interest is VLSI, Probability Theory and Stochastic Processes, Communications and Digital IC Applications</string>
    <string name="dshod">Dr. T. Srikanth is working as Associate Professor and Head of Department of CSE (Data Science) in Malla Reddy Institute of Technology and Science, Maisammaguda, Dhulapally, Hyderabad, Telangana. He has 12 years of experience in teaching. He has published many papers in the peer-refereed National and International journals and conferences. He has received his Doctorate (Ph.D.) degree in Computer Science and Engineering from SSSUTMS University, Bhopal, Madhya Pradesh. He did his M. Tech with the specialization of Software Engineering from NCET, JNTU Kakinada. He did his B. Tech with the specialization of Computer Science and Engineering from KLCE, ANU. His research interests include Computer Networks, Data mining and Data science. He is Life time member of Indian Society for Technology Education (ISTE), Life Membership No: LM115041. He has held different academic positions like NBA Coordinator, Head of the Department, Examination Branch In charge and Spot Coordinator.</string>
    <string name="front">MRITS is a very special place. As Indias premier engineering college, it is a college in which young people can flourish, find confidence and a sense of self-worth whilst achieving the very highest academic standards.Dr. K. Ravindra received his B.Tech. degree in Electronics and Communication Engineering from Andhra University, M.E. with Honors from University of Roorkee (Presently IIT, Roorkee) and Ph. D. in the feild of Mobile Communications from Osmania University. He is a recipient of GOLD MEDAL from Roorkee University for standing first in Masters Degree. He has Engineering teaching experience of over 26 years in various capacities. Dr. Ravindra served as Senior Scientist in the "Research and Training Unit for Navigational Electronics" Osmania University from December 2000 to December 2002.He is presently working as PRINCIPAL in Malla Reddy Institute Of Technology And Science, Hyderabad. Prof. Ravindra has 36 technical papers to his credit published in various International, National Journals and Conferences. He coauthored 2 technical reports in the feild of GPS. Prof. Ravindra is the resource person for video lectures produced by SONET, Andhra Pradesh.</string>
    <string name="cshod">Dr. Y.Madhusekhar is working as Associate Professor and Head of Department of CSE (Cyber Security) in Malla Reddy Institute of Technology and Science, Maisammaguda, Dhulapally, Hyderabad, Telangana.He has 13+ years of experience in teaching in the area of Computer Science and Engineering (CSE).His Areas of interests include Image and Video Processing, Artificial Intelligence, and Data Mining.In-charge for NBA Criteria 2 and 7
Worked as NAAC coordinator
Coordinator for National Conference on Wireless Communications and Mobile Computing
Organizer for college fest</string>
    <string name="ithod">Dr.J.Vignesh is working as Associate Professor and Head of Department of Information Technology in Malla Reddy Institute of Technology and Science, Maisammaguda, Dhulapally, Hyderabad, Telangana.He has 10 + years of Teaching experience in the area of Computer science and Engineering.Data Mining.Recieved International "Teaching Excellence Award" from INDO-GLOBAL EDUCATION SUMMIT 2017</string>
    <string name="aimlhod">Dr. N.Vinaya kumari is working as Associate Professor and Head of Department of CSE (AI&amp;ML) in Malla Reddy Institute of Technology and Science, Maisammaguda, Dhulapally, Hyderabad, Telangana. She has 10+ years of experience in teaching field. She has published many papers in the SCI, SCOPUS, peer-refereed National and International journals, book chapters and conferences. She has received her Doctorate (Ph.D.) degree in Computer Science and Engineering from SSSUTMS University, Bhopal, Madhya Pradesh. She did M.Tech with the specialization of Computer science and Engineering from St.Mary’s College Of Engineering And Technology, Deshmukhi, JNTU Hyderabad. she did his B. Tech with the specialization of Computer Science and Engineering from Aditya Engineering College Surampally Kakinada, JNTUK. She has research interests include Artificial Intelligence and Machine Learning, Data mining, She is a Coordinator of Indian Society for Technology Education (ISTE), She has held different academic positions like NBA and NAAC Coordinator.</string>
    <string name="csedep">The Computer Science Department strives for excellence in creating, applying, and imparting knowledge in computer science and engineering through comprehensive educational programs, research in collaboration with industry and government, dissemination through scholarly publications, and service to professional societies, the community, the state, and the nation.

The Department of CSE was established in the year 2005 with an intake of 60 students per batch. In a span of 3 years it has grown and the intake has been increased from 60 to 120 and now intake has increased from 120 to 180. The department has 32 teaching staff with 3 professors, 5 Associate professors and 23 assistant professors with PG qualification and rich experience in teaching and industry. It has established fully functional laboratories to fulfill the norms of JNTUH and AICTE, Imparting quality project work to students in the special characteristics for the career prospects.</string>
    <string name="csdep">The Department of Computer Science and Engineering (Cyber Security): Cyber security is the application of technologies, processes and controls to protect systems, networks, programs, devices and data from cyber attacks. from the academic year 2020—2021 with an intake of 60. The department has 3 teaching staff with 1 professors and 2 assistant professors with PG qualification and rich experience in teaching and industry. It has established fully functional laboratories to fulfill the norms of JNTUH and AICTE, Imparting quality project work to students in the special characteristics for the career prospects.

CAREER OPPORTUNITIES AFTER COMPLETION OF THE COURSE: 1. Security analyst 2. Security engineer 3. Security architect 4. Security administrator 5. Chief Information Security Officer (CISO) 6. Chief Security Officer (CSO) 7. Data Protection Officer (DPO) 8. Security Consultant/Specialist/Intelligence</string>
    <string name="dsdep">The Department of Computer Science and Engineering (Data Science): Data science is a relatively new emerging and an interdisciplinary field of Computer Science. It concerned with the collection, preparation, analysis, visualization, management and preservation of large collections of information aiming at generating value from the data itself. from the academic year 2020—2021 with an intake of 60. The department has 3 teaching staff with 1 professors and 2 assistant professors with PG qualification and rich experience in teaching and industry. It has established fully functional laboratories to fulfill the norms of JNTUH and AICTE, Imparting quality project work to students in the special characteristics for the career prospects.

CAREER OPPORTUNITIES AFTER COMPLETION OF THE COURSE: 1. Data Scientist 2. Data Analyst 3. Data Engineer 4. Data Mining Engineer 5. Data Architect 6. Project Manager 7. Data Consultant 8. Business Analyst</string>
    <string name="placements">Courses</string>
</resources>