<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="10dp"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    app:cardElevation="80dp"
    android:id="@+id/cardnoti"
    tools:context=".home.Notification"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="690dp"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="TODO"
                android:src="@drawable/mritslogo" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/my_college_mrits"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/light"
                        android:text="@string/date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size01" />


                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/light"
                        android:text="02-01-2023"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size01" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:fontFamily="@font/light"
                        android:text="@string/time"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size01" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/light"
                        android:text="12:00"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size01" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/deleteNoticeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_margin"
            android:fontFamily="@font/bold"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/deleteNoticeImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY" />
        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id" />



</com.google.android.material.card.MaterialCardView>