<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:id="@+id/cardnoti"
    android:contextClickable="true"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:saveEnabled="true"
    app:cardElevation="30dp"
    app:layout_scrollEffect="compress"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="550dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="537dp"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">



            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="TODO"
                android:src="@drawable/mritslogo" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/my_college_mrits"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/light"
                        android:text="@string/date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size01" />


                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/light"
                        android:text="02-01-2023"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size01" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:fontFamily="@font/light"
                        android:text="@string/time"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size01" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/light"
                        android:text="12:00"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size01" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/deleteNoticeTitle"
            android:layout_width="wrap_content"
            android:textIsSelectable="true"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_margin"
            android:fontFamily="@font/bold"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            app:cardCornerRadius="10dp">


              <androidx.constraintlayout.widget.ConstraintLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

                  <ImageView
                      android:id="@+id/deleteNoticeImage"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:contentDescription="@string/todo"
                      android:saveEnabled="true"
                      android:scaleType="fitXY"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent" />

                  <androidx.cardview.widget.CardView
                      android:layout_marginTop="10dp"
                      android:layout_marginRight="-8dp"
                      android:layout_width="60dp"
                      android:layout_height="16dp"
                      app:cardBackgroundColor="#C4FF6D00"
                      app:cardCornerRadius="20dp"
                      android:elevation="10dp"
                      app:cardElevation="20dp"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toTopOf="parent">

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="10dp"
                          android:layout_marginBottom="2dp"
                          android:fontFamily="@font/regular"
                          android:text="NEW"
                          android:textColor="@color/white"
                          android:textSize="12dp" />
                  </androidx.cardview.widget.CardView>
              </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>



</com.google.android.material.card.MaterialCardView>